BusOne/src/objects/Child_Account_vod__c.object
<CustomObject>
    <description>Describe the hierarchy of accounts and organizations.</description>
    <fields>
        <fullName>Alternate_Name_vod__c</fullName>
        <description>Alternate name of one child account used in iRep to show an alpha-bar</description>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Times_vod__c</fullName>
        <description>Used by the Office Best Times control to store the best time to visit this Account.</description>
        <label>Best Times</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Account_Identifier_vod__c</fullName>
        <description>The Account.Account_Identifier_vod for the Child Account.</description>
        <formula>Child_Account_vod__r.Account_Identifier_vod__c</formula>
        <label>Child Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_Search_LastFirst_vod__c</fullName>
        <description>Field used for searching.</description>
        <formula>Child_Account_vod__r.Account_Search_LastFirst_vod__c</formula>
        <label>Child Account Search LastFirst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the child account in the hierarchical relationship</description>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Of</relationshipLabel>
        <relationshipName>Child_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Affiliation_Count_vod__c</fullName>
        <description>The number of children that this Child Account has.</description>
        <label>Child Affiliation Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Furigana_vod__c</fullName>
        <description>Field used for searching Japanese names using Furigana.</description>
        <formula>Child_Account_vod__r.Furigana_vod__c</formula>
        <label>Child Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Name_vod__c</fullName>
        <description>The Account.formatted_name_vod for the Child Account.</description>
        <formula>Child_Account_vod__r.Formatted_Name_vod__c</formula>
        <label>Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Record_Type_vod__c</fullName>
        <description>The Account.Record_Type for the Child Account</description>
        <formula>CASESAFEID(Child_Account_vod__r.RecordTypeId)</formula>
        <label>Child Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Address_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag Account Hierarchy relations where the European Address Support job should copy Addresses.</description>
        <label>Copy Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Master_Status_vod__c</fullName>
        <description>Corresponds to the validation status of a record in the customer master. This field should not be modified.</description>
        <label>Customer Master Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staging_vod</fullName>
                </value>
                <value>
                    <fullName>Inactive_vod</fullName>
                </value>
                <value>
                    <fullName>Valid_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Under_Review_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Enforce the uniqueness of account hierarchy (parent, child) pair.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Key_vod__c</fullName>
        <description>Field used for integrations with external systems, such as Veeva Network</description>
        <label>External Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Name_Furigana_vod__c</fullName>
        <description>Furigana for the Parent Child formatted name</description>
        <formula>Parent_Account_vod__r.Furigana_vod__c &amp; &quot; &quot; &amp; Child_Account_vod__r.Furigana_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Name Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type_vod__c</fullName>
        <description>Describes the type of relationship for this (child, parent) pair</description>
        <label>Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMA Group Practice to Provider</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Business Partner/Affiliate</fullName>
                </value>
                <value>
                    <fullName>Manages</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Provider to Hospital via GLID Match</fullName>
                </value>
                <value>
                    <fullName>Provider to Account with Address Match (Suite)</fullName>
                </value>
                <value>
                    <fullName>Provider to Account with Address Match</fullName>
                </value>
                <value>
                    <fullName>Kaiser Affiliation</fullName>
                </value>
                <value>
                    <fullName>AMA Hospital Credential Affiliation</fullName>
                </value>
                <value>
                    <fullName>Regional Office</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Joint Venture</fullName>
                </value>
                <value>
                    <fullName>Sub-Group</fullName>
                </value>
                <value>
                    <fullName>Corp. Owned</fullName>
                </value>
                <value>
                    <fullName>Corp. Leased</fullName>
                </value>
                <value>
                    <fullName>ACO/MC Contract</fullName>
                </value>
                <value>
                    <fullName>Corp. Managed</fullName>
                </value>
                <value>
                    <fullName>Corp. Shareholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Identifier_vod__c</fullName>
        <description>Account Identifier for Child Account and Parent location</description>
        <label>Location Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NET_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Network Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network_Primary_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this relationship is reported as Primary in Network. Should be mapped to primary_relationship__v.</description>
        <label>Network Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Identifier_vod__c</fullName>
        <description>The Account.Account_Identifier_vod for the Parent Account.</description>
        <formula>Parent_Account_vod__r.Account_Identifier_vod__c</formula>
        <label>Parent Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the parent account in the hierarchical relationship</description>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliates</relationshipLabel>
        <relationshipName>Parent_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Affiliation_Count_vod__c</fullName>
        <description>The number of children that this Parent Account has.</description>
        <label>Parent Affiliation Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Furigana_vod__c</fullName>
        <formula>Parent_Account_vod__r.Furigana_vod__c &amp; &quot; &quot; &amp; Child_Account_vod__r.Furigana_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Child Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Child_Name_vod__c</fullName>
        <description>Determines the format for how the Parent and Child name entity is displayed. Default is &quot;Business Location AccountName&quot;</description>
        <formula>If (Child_Account_vod__r.IsPersonAccount, Parent_Account_vod__r.Name + &quot; &quot; + Child_Account_vod__r.LastName + &quot; &quot; + Child_Account_vod__r.FirstName, Parent_Account_vod__r.Name + &quot; &quot; + Child_Account_vod__r.Name)</formula>
        <label>Parent Child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Furigana_vod__c</fullName>
        <formula>Parent_Account_vod__r.Furigana_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Furigana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name_vod__c</fullName>
        <description>The Account.formatted_name_vod for the Parent Account.</description>
        <formula>Parent_Account_vod__r.Formatted_Name_vod__c</formula>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Type_vod__c</fullName>
        <description>The Account.Record_Type for the Parent Account.</description>
        <formula>CASESAFEID(Parent_Account_vod__r.RecordTypeId)</formula>
        <label>Parent Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_vod__c</fullName>
        <description>Formula field which determines if the relationship is a primary parent relationship</description>
        <formula>IF(Child_Account_vod__r.Primary_Parent_vod__c =  Parent_Account_vod__c, $Label.Common_Yes_vod, $Label.Common_No_vod)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Best_Time_Page_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that displays the Child Account Best Time component</description>
        <label>zvod_Best_Time_Page_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_ChildAccount_TSF_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that enables display of Territory Specific Field data on the Child Account layout</description>
        <label>zvod_ChildAccount_TSF_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Child_Account_Ratings_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that displays the Child Account Product Metrics component</description>
        <label>zvod_Child_Account_Ratings_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Child Account</label>
    <nameField>
        <displayFormat>CA{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ParentIsPersonAccount</fullName>
        <active>true</active>
        <description>Parent is a personal account.</description>
        <errorConditionFormula>Parent_Account_vod__r.IsPersonAccount</errorConditionFormula>
        <errorDisplayField>Parent_Account_vod__c</errorDisplayField>
        <errorMessage>The parent account must be a business account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SameParentAndChild</fullName>
        <active>true</active>
        <description>Parent and child accounts are the same.</description>
        <errorConditionFormula>Child_Account_vod__c  =  Parent_Account_vod__c</errorConditionFormula>
        <errorDisplayField>Child_Account_vod__c</errorDisplayField>
        <errorMessage>Parent and child accounts must be different.</errorMessage>
    </validationRules>
</CustomObject>